--- a/client/src/components/main.module.css
+++ b/client/src/components/main.module.css
@@ -101,3 +101,100 @@
   color: #70757a;
   margin-top: 5px;
 }
+
+:local(#gImage) {
+  vertical-align: text-bottom;
+  width: 16px;
+  height: 16px;
+  margin-right: 2px;
+}
+
+:local(.aboutInfo) {
+  font-size: 12px;
+  line-height: 18px;
+  color: #70757a;
+  margin-top: 5px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+:local(.infoTooltip) {
+  font-size: 12px;
+  line-height: 18px;
+  margin-top: 5px;
+  margin-left: 5px;
+  cursor: pointer;
+  position: relative;
+}
+
+/* .gInfoText {
+  visibility: hidden;
+  padding: 14px;
+}
+
+.infoTooltip:hover .gInfoText {
+  visibility: visible;
+  position: absolute;
+  border: solid 1px #70757a;
+  transform: translateX(-100%) translateY(40%);
+}
+
+.infoTooltip:hover::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-left: 1px solid;
+  border-top: 1px solid;
+  border-bottom: 1px solid white;
+  transform: rotate(45deg) skew(10deg,10deg);
+  left: 0px;
+  bottom: -13px; */
+  /* color: white; */
+/* } */
+
+/* span.infoTooltip {
+  position: relative;
+  margin-left: 5px;
+}
+
+span.infoTooltip span {
+  display: none;
+  position: absolute;
+  transform: translateX(-51%) translateY(20%);
+  width: 125px;
+  padding: 12px;
+  z-index: 100;
+  background:white;
+  color: #70757a;
+  border: 1px solid #70757a;
+  width: 280px;
+}
+
+span.infoTooltip span::before{
+  content:'';
+    display: block;
+    position: absolute;
+    left: 266px;
+    bottom: 100%;
+    width: 0;
+    height: 0;
+    border: 10px solid transparent;
+    border-bottom-color: #70757a;
+}
+
+span.infoTooltip span::after{
+  content:'';
+    position: absolute;
+    left: 267px;
+    bottom: 100%;
+    width: 0;
+    height: 0;
+    border: 9px solid transparent;
+    border-bottom-color: white;
+}
+
+span:hover.infoTooltip span {
+  display: flex;
+  position: absolute;
+} */
