--- a/client/src/components/main.module.css
+++ b/client/src/components/main.module.css
@@ -1,11 +1,12 @@
 :local(#about) {
   font-size: 13px;
   color: #777;
+  background-color: white;
 }
 
 :local(#container) {
   box-sizing: content-box;
-  width: 353px;
+  width: 360px;
   flex-direction: column;
   min-height: 0vh;
   padding: 30px;
@@ -118,83 +119,38 @@
   cursor: pointer;
 }
 
+:local(p) {
+  color: #222;
+  font-family: 'GoogleSans-Local',Roboto,Arial,Sans-Serif;
+  /* font-size: 13px; */
+  margin: 0;
+}
+
 :local(.infoTooltip) {
   font-size: 12px;
   line-height: 18px;
+  color: #70757a;
   margin-top: 5px;
   margin-left: 5px;
   cursor: pointer;
-  position: relative;
 }
 
-/* .gInfoText {
-  visibility: hidden;
-  padding: 14px;
+:local(.tooltipTop) {
+  margin-top: 10px;
+  font-size: 13px;
 }
 
-.infoTooltip:hover .gInfoText {
-  visibility: visible;
-  position: absolute;
-  border: solid 1px #70757a;
-  transform: translateX(-100%) translateY(40%);
+:local(.tooltipBottom) {
+  margin-bottom: 10px;
+  font-size: 13px;
 }
 
-.infoTooltip:hover::after {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border-left: 1px solid;
-  border-top: 1px solid;
-  border-bottom: 1px solid white;
-  transform: rotate(45deg) skew(10deg,10deg);
-  left: 0px;
-  bottom: -13px; */
-  /* color: white; */
-/* } */
-
-/* span.infoTooltip {
-  position: relative;
-  margin-left: 5px;
-}
-
-span.infoTooltip span {
-  display: none;
-  position: absolute;
-  transform: translateX(-51%) translateY(20%);
-  width: 125px;
-  padding: 12px;
-  z-index: 100;
-  background:white;
+:local(.gTooltip) {
+  font-size: 14px;
+  line-height: 18px;
   color: #70757a;
-  border: 1px solid #70757a;
-  width: 280px;
+  margin-top: 8px;
+  margin-left: 5px;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
-
-span.infoTooltip span::before{
-  content:'';
-    display: block;
-    position: absolute;
-    left: 266px;
-    bottom: 100%;
-    width: 0;
-    height: 0;
-    border: 10px solid transparent;
-    border-bottom-color: #70757a;
-}
-
-span.infoTooltip span::after{
-  content:'';
-    position: absolute;
-    left: 267px;
-    bottom: 100%;
-    width: 0;
-    height: 0;
-    border: 9px solid transparent;
-    border-bottom-color: white;
-}
-
-span:hover.infoTooltip span {
-  display: flex;
-  position: absolute;
-} */
